--- a/login.html
+++ b/login.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Git & GitHub</title>
+    <title>login分支</title>
 </head>
 <body>
-    This is Git!
     login form
 </body>
 </html>
